# blog-articles

developing/rust-cqrs-es-guide/: part1.md  part2.md  part3.md
developing/rust-cqrs-es-guide/part-2/crappy-user/: Cargo.toml
developing/rust-cqrs-es-guide/part-2/crappy-user/src/domain/: mod.rs  user.rs  user_domain_error.rs  user_registered_event.rs  user_tests.rs
developing/rust-cqrs-es-guide/part-2/lib-project/: Cargo.toml
developing/rust-cqrs-es-guide/testing-writing-claims/crappy-user/: Cargo.toml
developing/rust-cqrs-es-guide/testing-writing-claims/crappy-user/src/domain/: mod.rs  user_tests.rs
opinion/: dto.md  real-devops.md  the-dead-of-scrum.md  the-five-common-mistakes-for-ddd.md
self-hosted-infra/season1/: self-hosted-infrastructure-on-aws-with-terraform-part1.md  self-hosted-infrastructure-on-aws-with-terraform-part2.md  self-hosted-infrastructure-on-aws-with-terraform-part3.md  self-hosted-infrastructure-on-aws-with-terraform-part4.md  self-hosted-infrastructure-on-aws-with-terraform-part5.md
