[package]
name = "crappy-user"
version = "0.1.0"
edition = "2021"
authors = ["Cesc JR <francesc.travesa@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "crappy-user"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
